--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ Icon
 ._*
 
 
+
 ############################
 # Linux
 ############################
@@ -112,3 +113,5 @@ exports
 *.cache
 build
 .strapi-updater.json
+
+package-lock.json
